# hurby

./: .gitignore  CONTRIBUTING.md  Dockerfile  Hurby.py  LICENSE  README.md  __init__.py  hurby.py  hurby.sh  pyproject.toml  run.py  setup.py
character/: Blacklist.py  Character.py  CharacterManager.py  blacklist.py  character.py  character_manager.py  character_reference_table.py  equipment.py  inventory.py  permission_levels.py  user_id_types.py
character/blacklist/: blacklist.py  blacklist_crawler.py  blacklist_updater.py  external_blacklist_updater.py
character/exceptions/: insufficient_credits_exception.py  less_than_zero_exception.py
config/: BotConfig.py  Config.py  bot_config.py
hurby/: __init__.py  main.py  run.py
hurby/achievements/: achievement.py  achievements_manager.py  evaluation.py  hook.py  scope.py  type.py
hurby/achivements/: AbstractAchivement.py
hurby/character/: character.py  character_manager.py  character_reference_table.py  equipment.py  inventory.py
hurby/config/: bot_config.py
hurby/items/: base_item.py  base_stats.py  item_manager.py
hurby/twitch/: twitch_config.py  twitch_receiver.py
hurby/utils/: api_test.py  const.py  (+3 more)
items/: base_ability.py  base_effect.py  base_item.py  item_manager.py
twitch/: TwitchConfig.py  TwitchReciever.py
twitch_hurby/: twitch_config.py  twitch_irc_bot.py  twitch_receiver.py  twitch_scopes.py
utils/: Const.py  HurbyUtils.py  JSONLoader.py  Logger.py  ModuleLoader.py  api_test.py  const.py  hurby_utils.py  json_loader.py  logger.py  status.py  time_measure.py  utils.py
webapp/: app.py
(+124 files in other folders)
